<resources>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="app_name">Inland Pilot</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pin">PIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="otp_login">request otp for login</string>
    <string name="dont_have_an_account_register">DONT HAVE AN ACCOUNT? REGISTER</string>
    <string name="already_registered">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="name">Name *</string>
    <string name="pan_no">PAN No. *</string>
    <string name="aadhar_no">Aadhar No. *</string>
    <string name="address">Address *</string>
    <string name="state">State</string>
    <string name="pincode">Pincode *</string>
    <string name="dl_no">DL No. *</string>
    <string name="account_no_">Account No. *</string>
    <string name="account_no">Bank Account No.</string>
    <string name="account_number">Account No.</string>
    <string name="ifsc_code_">IFSC Code *</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="bank_name_">Bank Name *</string>
    <string name="bank_name">Bank Name</string>
    <string name="driver">Driver</string>
    <string name="owner">Owner</string>
    <string name="both">Both</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="forgot_pin_text">Enter the mobile number associated with this account</string>
    <string name="verify_mobile_no">Verify your mobile no.</string>
    <string name="otp_text">Please enter the OTP send on your registered number</string>
    <string name="otp">OTP</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="change_pin">Change PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="select_registration_type">Select registration type : </string>
    <string name="no_of_vehicle">No. Of Vehicle</string>
    <string name="loading">Loading</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="check_internet">Check internet connection</string>
    <string name="no_data">No Data</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="mobile_no">Mobile No. *</string>
    <string name="otp_sent">We have sent an OTP on your number</string>
    <string name="owner_name">Owner\'s Name *</string>
    <string name="owner_pan_no">Owner\'s PAN No. *</string>
    <string name="owner_aadhar_no">Owner\'s Aadhar No. *</string>
    <string name="driver_name">Driver\'s Name *</string>
    <string name="driver_pan_no">Driver\'s PAN No. *</string>
    <string name="driver_aadhar_no">Driver\'s Aadhar No. *</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_pan_no">Enter PAN No.</string>
    <string name="enter_aadhar_no">Enter Aadhar No.</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_dl_no">Enter DL No.</string>
    <string name="select_state">Select State</string>
    <string name="cannot_be_empty">Cannot Be Empty</string>
    <string name="valid_mobile_no">Enter Valid Mobile No.</string>
    <string name="reject">Reject</string>
    <string name="enter_valid_otp">Enter Valid OTP</string>
    <string name="enter_valid_pin">Enter Valid Pin</string>
    <string name="pin_did_not_match">PIN Did Not Match</string>
    <string name="mobile_no_did_not_matched">Mobile No. Did Not Matched</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="profile_details">Profile Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="perosnal_details">Personal Details</string>
    <string name="name_">Name</string>
    <string name="mobile_no_">Mobile No.</string>
    <string name="address_">Address</string>
    <string name="pan_no_">PAN No.</string>
    <string name="aadhar_no_">Aadhar No.</string>
    <string name="pin_login">PIN Login</string>
    <string name="pin_text">Enter 4 Digit Login PIN</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="enter_account_no">Enter Account No.</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="loading_availability">Loading Availability</string>
    <string name="placement">Placement</string>
    <string name="load_image">Load Image</string>
    <string name="tracking">Tracking</string>
    <string name="registration">Registration</string>
    <string name="user_activation">User is not activated yet, please wait for approval.</string>
    <string name="turnOffMockLocation">Turn Off Mock Location</string>
    <string name="permissionNecessary">Permission necessary</string>
    <string name="locationPermissionIsNecessaryGivePermissionFromSetting">Location permission is necessary,give permission from settings</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="login_with_pin">Login with PIN</string>
    <string name="driver_cum_owner">Driver Cum Owner</string>
    <string name="pod">POD</string>
    <string name="settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicle_master">Vehicle Master</string>
    <string name="route_master">Route Master</string>
    <string name="my_trip">My Trip</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="model_no">Model No.</string>
    <string name="dashboard">Dashboard</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="make_no">Make No</string>
    <string name="chassis_no">Chassis No</string>
    <string name="engine_no">Engine No</string>
    <string name="fitness_date">Fitness Date</string>
    <string name="registry_date">Registry Date</string>
    <string name="weight_capacity">Weight Capacity</string>
    <string name="rc_book_no">RC Book No</string>
    <string name="free_out_space">Free Out Space</string>
    <string name="vehicle_space">Vehicle Space</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="insurance_validity_date">Insurance Validity Date</string>
    <string name="rt_no">RT No</string>
    <string name="vehicle_register_state">Vehicle Register State</string>
    <string name="vehicle_id">Vehicle Id</string>
    <string name="remark">Remark</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="start_trip">Start Trip</string>
    <string name="origin_of_loads">Origin Of Loads</string>
    <string name="pick_up">Pick up :</string>
    <string name="delivery">Delivery :</string>
    <string name="bid">BID</string>
    <string name="contact_us">CONTACT US</string>


</resources>