<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_vehicle_master"
            android:icon="@drawable/ic_vehicle"
            android:title="@string/vehicle_master" />
        <item
            android:id="@+id/nav_route_master"
            android:icon="@drawable/ic_route_master"
            android:title="@string/route_master" />
    </group>

    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile_details" />
                <item
                    android:id="@+id/nav_bank_details"
                    android:icon="@drawable/ic_bank"
                    android:title="@string/bank_details"
                    app:iconTint="@color/grey_200" />
                <item
                    android:id="@+id/nav_change_pin"
                    android:icon="@drawable/ic_change_pin"
                    android:title="@string/change_pin"
                    app:iconTint="@color/grey_200" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"
                    app:iconTint="@color/grey_200" />
            </group>
        </menu>
    </item>
</menu>