<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_text"
        android:textAlignment="center"
        android:textColor="@color/login_textbox_color" />

    <TextView
        android:id="@+id/otpTimerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/login_textbox_color"
        tools:text="03:00" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpTextLayout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/otp"
        android:textColorHint="@color/login_textbox_color"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otpEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/login_textbox_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/resendOtpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/resend_otp"
        android:textColor="@color/login_textbox_color"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/submitTextView"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/submitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</LinearLayout>