<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Login.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/iwl_logo"
            app:srcCompat="@drawable/iwl_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/login_textbox_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileNoTextLayout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/login_textbox_color"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/login_textbox_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pinTextLayout"
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/pin"
                    android:textColorHint="@color/login_textbox_color"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pinEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:maxLength="4"
                        android:textColor="@color/login_textbox_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPinTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/login_textbox_color" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pinLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/login"
                    app:backgroundTint="@color/login_textbox_color" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/otpLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/otp_login"
                    android:visibility="gone"
                    app:backgroundTint="@color/login_textbox_color" />

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:text="@string/dont_have_an_account_register"
                    android:textColor="@color/login_textbox_color"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/loginWithOtpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/login_with_otp"
                    android:textColor="@color/login_textbox_color" />

                <TextView
                    android:id="@+id/loginWithPinTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/login_with_pin"
                    android:textColor="@color/login_textbox_color"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_marginStart="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="version code:"
                android:textColor="@color/login_textbox_color" />
            <TextView
                android:id="@+id/versionCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textColor="@color/red_alert" />
        </LinearLayout>
    </LinearLayout>
</layout>